--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@exfabrica/strapi-plugin-awesome-seo": "^1.0.0-beta.1.1",
     "@strapi/plugin-graphql": "4.3.2",
     "@strapi/plugin-i18n": "4.3.2",
     "@strapi/plugin-users-permissions": "4.3.2",
     "@strapi/provider-upload-cloudinary": "^4.3.2",
     "@strapi/strapi": "4.3.2",
     "pg": "8.6.0",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "strapi-plugin-wysiwsg-react-md-editor": "^4.2.0"
   },
   "author": {
     "name": "A Strapi developer"
