--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@strapi/strapi": "4.3.2",
     "pg": "8.6.0",
     "pg-connection-string": "^2.5.0",
+    "strapi-plugin-navigation": "^2.2.1",
     "strapi-plugin-wysiwsg-react-md-editor": "^4.2.0"
   },
   "author": {
